--- a/user-activities/package.json
+++ b/user-activities/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "selenium": "clear && node __tests__/selenium/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "chalk": "^2.4.2",
+    "node-sass": "^4.12.0",
+    "selenium-webdriver": "^4.0.0-alpha.4"
   }
 }
